homework HOME added, styles for HOME added and back to home anchor in Git homework as well

--- a/hw-00-git/hw00.html
+++ b/hw-00-git/hw00.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko|Abril+Fatface|Amatic+SC:400,700|Poiret+One|Shojumaru|Coming+Soon&display=swap" rel="stylesheet">
     <title>Homework 00</title>
+    <style>
+        .home{
+            text-decoration: none;
+            font-family: 'Coming Soon', cursive;
+            color: #ff6e40;
+            font-size: 20px;
+        }
+        .home:hover{
+            text-decoration: underline;
+        }
+        h1{
+            text-align: center;
+            font-family: 'Amatic SC', cursive;
+            font-size: 70px;
+        }
+        .home span{
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
-    <a href="../index.html">Go Home</a>
+    <a href="../index.html" class="home"><span>&#9668</span> Home</a>
     <h1>Homework about github</h1>
 
     <h2>Github cheet sheet</h2>
