--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko|Abril+Fatface|Amatic+SC:400,700|Poiret+One|Coming+Soon&display=swap" rel="stylesheet">
     <title>Cursor Homework Mauricio</title>
 </head>
 <body>
-    <a href="./hw-00-git/hw00.html">Go to first homework</a>
+    <h1>CURSOR Homework</h1>
+    <div id="container">
+        <ul id="menu">
+            <li class ="item">
+                <div class="topic">
+                    <a href="./hw-00-git/hw00.html">Git</a>
+                </div>
+                <div class="description">
+                    <p>Basic commands</p>
+                    <p>Advanced commands</p>
+                    <p>gitignore file</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <footer>
+        <p>Mauricio Morocho</p>
+    </footer>
 </body>
 </html>
