homework 01variables and data types added. general css file for Home anchor added, home page font size fontsize decreased a bit

--- a/index.html
+++ b/index.html
@@ -22,10 +22,32 @@
                     <p>gitignore file</p>
                 </div>
             </li>
+            <li class ="item">
+                <div class="topic">
+                    <a href="./hw-01-variables-and-types/hw01.html">Variables and types</a>
+                </div>
+                <div class="description">
+                    <p>Numbers</p>
+                    <p>Strings</p>
+                    <p>Operations</p>
+                    <p>Math object</p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
         <p>Mauricio Morocho</p>
     </footer>
+    <script>
+        //getElementsByClassName returns a HTML collection 
+        /*let topics = Array.from(document.getElementsByClassName('topic')); 
+        topics.map(topic => {
+            [...topic.children].map(item => {
+                if(item.textContent.length > 15){
+                    item.style.fontSize = "50px";
+                }
+            });
+        });*/
+    </script>
 </body>
 </html>
