--- a/hw-01-variables-and-types/hw01.html
+++ b/hw-01-variables-and-types/hw01.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko|Abril+Fatface|Amatic+SC:400,700|Poiret+One|Shojumaru|Coming+Soon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../general.css">
-    <title>Document</title>
+    <title>Homework 01</title>
 </head>
 <body>
     <a href="../index.html" class="home"><span>&#9668</span> Home</a>
