homework 02 loops-conditionals added, text positioning of menu items to the right updated

--- a/index.html
+++ b/index.html
@@ -24,13 +24,26 @@
             </li>
             <li class ="item">
                 <div class="topic">
-                    <a href="./hw-01-variables-and-types/hw01.html">Variables and types</a>
+                    <a href="./hw-01-variables-and-types/hw01.html">Variables and data types</a>
                 </div>
                 <div class="description">
                     <p>Numbers</p>
                     <p>Strings</p>
                     <p>Operations</p>
                     <p>Math object</p>
+                </div>
+            </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-02-loops-conditionals/hw02.html">Loops and conditionals</a>
+                </div>
+                <div class="description">
+                     <p>User interaction: <code>alert, prompt, confirm</code></p>
+                     <p>Comparisons: <code><, >, ===, <=, >=, !</code></p>  
+                     <p>Conditional Operators: <code>if, else, else-if, (..)_?_:</code></p> 
+                     <p>logical Operators: <code>||, &&, !</code></p>
+                     <p>Loops: <code>for, while, do-while, switch</code></p>
+                     <p>Scope: <code>global, local</code></p>
                 </div>
             </li>
         </ul>
