homework03 functions added, fotter fixed for being sticky at bottom.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
                      <p>Scope: <code>global, local</code></p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-03-functions/hw03.html">Functions</a>
+                </div>
+                <div class="description">
+                     <p>declaration: <code>function f(){}</code> & expression: <code>const f = function(){}</code></p>
+                     <p>arrow functions: <code>const f = () => {}</code></p>
+                      <p>IIFE</p>
+                     <p>pure functions</p>
+                     <p>recursion</p> 
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
