fixing Homewor03, files names hanged acording to the code content, func4, func7 and func9 modified

--- a/hw-03-functions/index.html
+++ b/hw-03-functions/index.html
@@ -79,7 +79,7 @@
         </li>
     </ul>
 
-    <script src="./hw03.js"></script>
-    <script src="./hw03events.js"></script>
+    <script src="./pure-functions.js"></script>
+    <script src="./events.js"></script>
 </body>
 </html>
