--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </li>
             <li class="item">
                 <div class="topic">
-                    <a href="./hw-03-functions/hw03.html">Functions</a>
+                    <a href="./hw-03-functions/index.html">Functions</a>
                 </div>
                 <div class="description">
                      <p>declaration: <code>function f(){}</code> & expression: <code>const f = function(){}</code></p>
