homework04 arrays basics added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                      <p>recursion</p> 
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-04-arrays-basics/index.html">Arrays</a>
+                </div>
+                <div class="description">
+                     <p>array declaration</p>
+                     <p>length</p>
+                      <p>basic operations</p>
+                     <p>loop over elements</p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
