homework05 added arrays-2, need handle input errors

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
                      <p>loop over elements</p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-05-array-methods/index.html">Array methods<sup>+</sup></a>
+                </div>
+                <div class="description">
+                     <p>callback</p>
+                     <p><code>.map()</code></p>
+                     <p><code>.filter()</code></p>
+                     <p><code>.find() / .findIndex()</code></p>
+                     <p><code>.every() / .some()</code></p>
+                     <p><code>.reduce()</code></p>
+                     <p><code>.sort()</code></p>    
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
