--- a/hw-05-array-methods/index.html
+++ b/hw-05-array-methods/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Teko|Abril+Fatface|Amatic+SC:400,700|Poiret+One|Shojumaru|Coming+Soon&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./advanced.css">
     <link rel="stylesheet" href="../general.css">
     <title>Homework 05</title>
 </head>
@@ -12,7 +13,7 @@
     <a href="../index.html" class="home"><span>&#9668</span> Home</a>
     <h1>Homework: Array advanced methods</h1>
     <section>
-        <ul>
+        <ul id="hm05">
             <li id="fn1">
                 <input id="fn1-len" type="text" placeholder="length">
                 <input id="fn1-min" type="text" placeholder="min">
@@ -64,7 +65,7 @@
                 <input id="fn10-str" type="text" placeholder="enter a word">
                 <button id="fn10-btn">generateCombinations</button>
                 <br>
-                <textarea name="" id="fn10-res" cols="50" rows="10">...</textarea>
+                <textarea name="" id="fn10-res" cols="50" rows="10"></textarea>
             </li>
         </ul>
     </section>
