Homework 06 objects added.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
                      <p><code>.sort()</code></p>    
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-06-objects/index.html">Objects</a>
+                </div>
+                <div class="description">
+                     <p>obj literal / constructor</p>
+                     <p>properties</p>
+                     <p>methods</p>
+                     <p>destructuring</p> 
+                     <p>iteration</p> 
+                     <p> <code>this</code> 😭😭😭😭</p> 
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
