homework 07, call-apply-bind, intervals added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
                      <p> <code>this</code> 😭😭😭😭</p> 
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-07-call-apply-bind/index.html">Binding</a>
+                </div>
+                <div class="description">
+                    <p> <code>this</code> 🤯🤯🤯</p> 
+                    <p><code>.call()</code></p>
+                    <p><code>.apply()</code></p>
+                    <p><code>.bind()</code></p>
+                    <p>scheduling</p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
