--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
                     <p>scheduling</p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-08-classes-prototypes/index.html">Classes & Prototypes</a>
+                </div>
+                <div class="description">
+                    <p>class</p> 
+                    <p>constructor</p>
+                    <p>fields / methods</p>
+                    <p>getter / setter</p> 
+                    <p>prototype</p>
+                    <p>inheritance</p>
+                    <p>static</p>
+                </div>
+            </li>
+
         </ul>
     </div>
     <footer>
