--- a/index.html
+++ b/index.html
@@ -122,7 +122,19 @@
                     <p>static</p>
                 </div>
             </li>
-
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-09-dom/index.html">DOM</a>
+                </div>
+                <div class="description">
+                    <p>DOM navigation</p> 
+                    <p>Element search</p>
+                    <p>Element interaction</p>
+                    <p>Attrubutes</p> 
+                    <p>Styles</p>
+                    <p>create/add/remove</p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
