homework 10 events uploaded

--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
                     <p>create/add/remove</p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-10-events/index.html">EVENTS</a>
+                </div>
+                <div class="description">
+                    <p>Handle events</p> 
+                    <p>Add events</p>
+                    <p>Remove events</p>
+                    <p>Event lifecycle</p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
