homework 11 promises completed and uploaded

--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
                     <p>Event lifecycle</p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-11-promises/index.html">Promises</a>
+                </div>
+                <div class="description">
+                    <p>Promises</p> 
+                    <p><code>.then(), .catch(), .finally()</code></p>
+                    <p>async-await</p>
+                    <p><code>Date()</code></p>
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
