homework 11 promises, homework name uploaded

--- a/hw-11-promises/index.html
+++ b/hw-11-promises/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <a href="../index.html" class="home"><span>&#9668</span> Home</a>
-    <h1>Homework: events</h1>
+    <h1>Homework: promises</h1>
     <div id="container">
         <button id="getChars">getChineseChars</button>
         <p id="chineseChars">...</p>
