--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
                     <p><code>Date()</code></p>
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-12-api/index.html">API</a>
+                </div>
+                <div class="description">
+                    <p>HTTPS</p>
+                    <p>REST</p>
+                    <p>axios / fetch</p> 
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
