homework 14 webpack updated.

--- a/hw-04-arrays-basics/index.html
+++ b/hw-04-arrays-basics/index.html
@@ -13,6 +13,8 @@
     <h1>Homework: Array basics</h1>
     <p><code>All results in console 👇</code> </p>
 
+    <script src="./functions.js"></script>
     <script src="./arrays-basic-methods.js"></script>
+
 </body>
 </html>
