--- a/hw-06-objects/index.html
+++ b/hw-06-objects/index.html
@@ -14,6 +14,7 @@
 
     <p><code>All results in console 👇</code> </p>
 
+    <script src="./functions.js"></script>
     <script src="./obj-functions.js"></script>
 </body>
 </html>
