--- a/hw-07-call-apply-bind/index.html
+++ b/hw-07-call-apply-bind/index.html
@@ -19,6 +19,7 @@
 
     <p><code>All results in console 👇</code> </p>
 
+    <script src="./functions.js"></script>
     <script src="./binding-functions.js"></script>
 </body>
 </html>
