--- a/hw-08-classes-prototypes/index.html
+++ b/hw-08-classes-prototypes/index.html
@@ -18,7 +18,7 @@
     <h1>Homework: classes and prototypes</h1>
 
     <p><code>All results in console 👇</code> </p>
-
+    <script src="./student.js"></script>
     <script src="./class-functions.js"></script>
 </body>
 </html>
