--- a/hw-09-dom/index.html
+++ b/hw-09-dom/index.html
@@ -14,11 +14,12 @@
     
     <h1>Homework: DOM</h1>
 
-    <section>
+    <section id="mainContainer">
         <div id="static-container" class="container"></div>
         <div id="crazy-container" class="container"></div>  
     </section>  
 
+    <script src="./functions.js"></script>
     <script src="./blocks.js"></script>
 </body>
 </html>
