--- a/hw-11-promises/index.html
+++ b/hw-11-promises/index.html
@@ -30,6 +30,7 @@
         <button id="getChars">getChineseChars</button>
         <p id="chineseChars">...</p>
     </div>
+    <script src="./functions.js"></script>
     <script src="./chinese-promise.js"></script>
 </body>
 </html>
