--- a/hw-13-generators/index.html
+++ b/hw-13-generators/index.html
@@ -36,6 +36,7 @@
         </div>
     </section>
     
+    <script src="./functions.js"></script>
     <script src="./generators.js"></script>
 </body>
 </html>
