--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@
                     <p>symbol</p> 
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-14-webpack/build/index.html">webpack</a>
+                </div>
+                <div class="description">
+                    <p>npm</p>
+                    <p>node_modules</p>
+                    <p>plugins</p> 
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
