--- a/hw-12-api/index.html
+++ b/hw-12-api/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <ul id="results-list"></ul>
-    
+    <script src="./characters.js"></script>
     <script src="./films-requests.js"></script>
     <script src="./planets-requests.js"></script>
 </body>
