--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
                     <p>plugins</p> 
                 </div>
             </li>
+            <li class="item">
+                <div class="topic">
+                    <a href="./hw-15-react-basics/twitter/build/index.html">react basics</a>
+                </div>
+                <div class="description">
+                    <p>npm</p>
+                    <p>node_modules</p>
+                    <p>plugins</p> 
+                </div>
+            </li>
         </ul>
     </div>
     <footer>
